--- a/src/app/create-task/actions/contact-center/contact-center.component.scss
+++ b/src/app/create-task/actions/contact-center/contact-center.component.scss
@@ -46,3 +46,10 @@
 .pad-t-5{
     padding-top: 5px !important;
 }
+.button-style {
+    text-align: right;
+    margin-top: 25px;
+}
+.save-pad {
+    padding-right: 14px;
+}
