my task list resize,paginator,reorder added

--- a/src/assets/scss/table.scss
+++ b/src/assets/scss/table.scss
@@ -13,4 +13,13 @@
             }
         }
     } 
+    .ui-table-scrollable-wrapper{
+        .ui-table-scrollable-view{
+            .ui-table-scrollable-header{
+                .ui-table-scrollable-header-box{
+                    background-color:  #efeded !important;
+                }
+            }
+        }
+    }
 }  
