--- a/src/app/home/task/my-task-list/my-task-list.component.html
+++ b/src/app/home/task/my-task-list/my-task-list.component.html
@@ -1,28 +1,39 @@
-<p-table #dt [columns]="cols" [value]="data" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
-  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" paginatorPosition="top" 
-  [scrollable]="true" scrollHeight="300px" class="my-task-list-table">
+
+<div style="margin-bottom: 1em">
+  <button type="button" pButton icon="pi pi-chevron-left" (click)="prev()" style="margin-right:.5em" [disabled]="isFirstPage()"></button>
+  <button type="button" pButton icon="pi pi-refresh" (click)="reset()" style="margin-right:.5em"></button>
+  <button type="button" pButton icon="pi pi-chevron-right" (click)="next()" [disabled]="isLastPage()"></button>
+</div>
+<p-table #dt [columns]="cols" [value]="data" [paginator]="true" [rows]="noOfRowsPerPage" [showCurrentPageReport]="true"
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" paginatorPosition="bottom" [(first)]="first"
+  [scrollable]="true" scrollHeight="300px" class="my-task-list-table" [resizableColumns]="true" [reorderableColumns]="true">
+  <ng-template pTemplate="colgroup" let-columns>
+    <colgroup>
+        <col *ngFor="let col of columns" >
+    </colgroup>
+</ng-template>
   <ng-template pTemplate="header" let-columns>
     <tr>
-      <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+      <th *ngFor="let col of columns" [pSortableColumn]="col.field" pResizableColumn pReorderableColumn>
         {{col.header}}
         <p-sortIcon [field]="col.field"></p-sortIcon>
       </th>
       <th></th>
     </tr>
     <tr>
-      <th *ngFor="let col of columns">
+      <th *ngFor="let col of columns" pResizableColumn pReorderableColumn>
         <input pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')"
         style="width: 100%;">
       </th>
-      <th></th>
+      <th pResizableColumn pReorderableColumn></th>
     </tr> 
   </ng-template>
   <ng-template pTemplate="body" let-rowData let-columns="columns">
     <tr>
-      <td *ngFor="let col of columns">
+      <td *ngFor="let col of columns" class="ui-resizable-column">
         {{rowData[col.field]}}
       </td>
-      <td>
+      <td class="ui-resizable-column">
         <span class="fa fa-search" style="padding-left: 23px;"></span>
         <span class="pi pi-user-edit" (click)="onEditClick(rowData)" style="padding-left: 39px;"></span>
       </td>
