--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -81,7 +81,7 @@
     <p-card>
       <p-tabView>
         <p-tabPanel header="Task Detail">
-          <srca-task-detail  #srcaTaskDetails [taskDetailData]="contactCenterData" (saveTaskDetails)="saveTask($event)">
+          <srca-task-detail #srcaTaskDetails [taskDetailData]="contactCenterData" (saveTaskDetails)="saveTask($event)">
           </srca-task-detail>
         </p-tabPanel>
         <p-tabPanel header="Document">
@@ -89,12 +89,15 @@
         </p-tabPanel>
       </p-tabView>
       <div class="button-style">
+        <p-button type="button" label="{{(contactCenterTaskState === taskStateEnum.REVIEW) ? 'Return' : 'Next'}}"
+          class="save-pad" (click)="updateTaskState()">
+        </p-button>
         <p-button type="submit" label="Save" class="save-pad" (click)="srcaTaskDetails.onSubmit()">
         </p-button>
         <p-button type="button" label="Cancel" (click)="cancelClick()">
         </p-button>
       </div>
     </p-card>
-    
+
   </div>
 </div>
