--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.html
@@ -2,80 +2,90 @@
   <div>
     <div class="row col-md-12 task-details-b-pad">
       <div class="col-md-4">
-        <label class="task-detail-label">Caller Name<span class="required-indicator">*</span></label>
-        <input formControlName="callerName" type="text" pInputText
+        <label class="task-detail-label">Caller Name<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <input *ngIf="isTaskInReview" formControlName="callerName" type="text" pInputText
           [ngClass]="{ 'invalid-input': callerName.errors && callerName.touched }" />
+          <span *ngIf="!isTaskInReview">{{callerName.value}}</span>
       </div>
       <div class=" col-md-4">
-        <label class="task-detail-label">Caller Phone<span class="required-indicator">*</span></label>
-        <p-inputMask formControlName="callerPhone" mask="(999) 999-9999"
+        <label class="task-detail-label">Caller Phone<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <p-inputMask *ngIf="isTaskInReview" formControlName="callerPhone" mask="(999) 999-9999"
           [ngClass]="{ 'invalid-mask': callerPhone.errors && callerPhone.touched }">
         </p-inputMask>
+        <span *ngIf="!isTaskInReview">{{callerPhone.value}}</span>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-4">
-        <label class="task-detail-label">Call Code<span class="required-indicator">*</span></label>
-        <p-dropdown formControlName="callCode" [options]="callCodes" (onChange)="loadActionByCallCode(callCode.value)"
+        <label class="task-detail-label">Call Code<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <p-dropdown *ngIf="isTaskInReview" formControlName="callCode" [options]="callCodes" (onChange)="loadActionByCallCode(callCode.value)"
           [ngClass]="{ 'invalid-dropdown': callCode.errors && callCode.touched }">
         </p-dropdown>
-
+        <span *ngIf="!isTaskInReview">{{callCode.value}}</span>
       </div>
       <div class=" col-md-4">
-        <label class="task-detail-label">Action<span class="required-indicator">*</span></label>
-        <p-dropdown formControlName="action" [options]="actions"
+        <label class="task-detail-label">Action<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <p-dropdown *ngIf="isTaskInReview" formControlName="action" [options]="actions"
           [ngClass]="{ 'invalid-dropdown': action.errors && action.touched }">
         </p-dropdown>
+        <span *ngIf="!isTaskInReview">{{action.value}}</span>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-4">
-        <label class="task-detail-label">Fully Authenticated<span class="required-indicator">*</span></label>
-        <p-radioButton name="fullAuth" value="yes" formControlName="fullyAuthenticated" label="Yes" inputId="opt1"
+        <label class="task-detail-label">Fully Authenticated<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <p-radioButton *ngIf="isTaskInReview" name="fullAuth" value="yes" formControlName="fullyAuthenticated" label="Yes" inputId="opt1"
           [ngClass]="{ 'invalid-radio': fullyAuthenticated.errors && fullyAuthenticated.touched }">
         </p-radioButton>
-        <p-radioButton name="fullAuth" value="no" formControlName="fullyAuthenticated" label="No" inputId="opt2"
+        <p-radioButton *ngIf="isTaskInReview" name="fullAuth" value="no" formControlName="fullyAuthenticated" label="No" inputId="opt2"
           [ngClass]="{ 'invalid-radio': fullyAuthenticated.errors && fullyAuthenticated.touched }">
         </p-radioButton>
+        <span *ngIf="!isTaskInReview">{{fullyAuthenticated.value}}</span>
       </div>
 
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class="col-md-4">
-        <label class="task-detail-label">Taxpayer ID<span class="required-indicator">*</span></label>
-        <p-radioButton name="taxID" value="yes" formControlName="taxPayerIDAvailable" label="Yes" inputId="tax1"
+        <label class="task-detail-label">Taxpayer ID<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <p-radioButton *ngIf="isTaskInReview" name="taxID" value="yes" formControlName="taxPayerIDAvailable" label="Yes" inputId="tax1"
           [ngClass]="{ 'invalid-radio': taxPayerIDAvailable.errors && taxPayerIDAvailable.touched }">
         </p-radioButton>
-        <p-radioButton name="taxID" value="no" formControlName="taxPayerIDAvailable" label="No" inputId="tax2"
+        <p-radioButton *ngIf="isTaskInReview" name="taxID" value="no" formControlName="taxPayerIDAvailable" label="No" inputId="tax2"
           [ngClass]="{ 'invalid-radio': taxPayerIDAvailable.errors && taxPayerIDAvailable.touched }">
         </p-radioButton>
+        <span *ngIf="!isTaskInReview">{{taxPayerIDAvailable.value}}</span>
       </div>
       <div class="col-md-4" *ngIf="taxPayerIDAvailable.value === 'yes'">
-        <label class="task-detail-label">Taxpayer ID<span class="required-indicator">*</span></label>
-        <input type="text" formControlName="taxPayerID" pInputText />
+        <label class="task-detail-label">Taxpayer ID<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
+        <input *ngIf="isTaskInReview" type="text" formControlName="taxPayerID" pInputText />
+        <span *ngIf="!isTaskInReview">{{taxPayerID.value}}</span>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-4">
         <label class="task-detail-label">Task Priority</label>
-        <p-dropdown formControlName="taskPriority" [options]="taskPriorityData"></p-dropdown>
+        <p-dropdown *ngIf="isTaskInReview" formControlName="taskPriority" [options]="taskPriorityData"></p-dropdown>
+        <span *ngIf="!isTaskInReview">{{taskPriority.value}}</span>
       </div>
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class=" col-md-12">
         <label class="task-detail-label">Task Notes</label>
-        <textarea [rows]="5" [cols]="30" pInputTextarea formControlName="taskNotes"></textarea>
+        <textarea *ngIf="isTaskInReview" [rows]="5" [cols]="30" pInputTextarea formControlName="taskNotes"></textarea>
+        <span *ngIf="!isTaskInReview">{{taskNotes.value}}</span>
       </div>
     </div>
-    <div class="row col-md-12 task-details-b-pad">
+    <div  class="row col-md-12 task-details-b-pad">
       <div class=" col-md-1">
-        <label class="task-detail-label">Call Details<span class="required-indicator">*</span></label>
+        <label class="task-detail-label">Call Details<span *ngIf="isTaskInReview" class="required-indicator">*</span></label>
       </div>
-      <div class="editor-pad col-md-7">
-        <p-editor formControlName="callDetails" [style]="{'height':'200px'}"
+      <div  class="editor-pad col-md-7">
+        <p-editor *ngIf="isTaskInReview" formControlName="callDetails" [style]="{'height':'200px'}"
           [ngClass]="{ 'invalid-editor': callDetails.errors && callDetails.touched }">
         </p-editor>
+        <span *ngIf="!isTaskInReview">{{callDetails.value}}</span>
       </div>
+      
     </div>
     <div class="row col-md-12 task-details-b-pad">
       <div class="add-accounts-section task-details-b-pad">
