my-task list table UI changes

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -43,7 +43,7 @@
         </div>
         <div class="col-sm-9">
             <!-- tab view -->
-            <p-tabView>
+            <p-tabView class="contact-center-details">
                 <p-tabPanel header="Details">
                     <srca-account-details [accountDetails]="accountDetails"></srca-account-details>
                 </p-tabPanel>
