--- a/src/app/create-task/actions/contact-center/document/document.component.html
+++ b/src/app/create-task/actions/contact-center/document/document.component.html
@@ -1,6 +1,6 @@
 
 <div class="panel">
-    <p-panel header="Document">
+    <p-panel header="Document" class="documents-panel">
         <p-header>
             <button pButton type="button" label="Add Document" class="float-r" (click)="openDialog()" *ngIf="!uploadDoc"></button>
         </p-header>
