--- a/src/app/home/task/my-task-list/my-task-list.component.html
+++ b/src/app/home/task/my-task-list/my-task-list.component.html
@@ -35,8 +35,8 @@
         {{rowData[col.field]}}
       </td>
       <td class="ui-resizable-column">
-        <span class="fa fa-search" style="padding-left: 23px;"></span>
-        <span class="pi pi-user-edit" (click)="onEditClick(rowData)" style="padding-left: 39px;"></span>
+        <span class="fa fa-search pointer" style="padding-left: 23px;"></span>
+        <span class="pi pi-user-edit pointer" (click)="onEditClick(rowData)" style="padding-left: 39px;"></span>
       </td>
     </tr>
   </ng-template>
