--- a/src/assets/scss/table.scss
+++ b/src/assets/scss/table.scss
@@ -16,10 +16,17 @@
     .ui-table-scrollable-wrapper{
         .ui-table-scrollable-view{
             .ui-table-scrollable-header{
+                overflow-y: scroll;
                 .ui-table-scrollable-header-box{
-                    background-color:  #efeded !important;
+                    padding-right: 0px !important;
+                    // margin-right: 31px !important;
+                    // background-color: #ebebe8;;
                 }
+            }
+            .ui-table-scrollable-body {
+                overflow-y: scroll !important;
             }
         }
     }
 }  
+
