--- a/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
+++ b/src/app/create-task/actions/contact-center/task-detail/task-detail.component.scss
@@ -35,3 +35,7 @@
 input[type=text].ui-inputtext.invalid-input {
     border: 1px solid $invalid-input-border;
 }
+
+.span-margin-10 {
+    margin-right: 10px;
+}
