task list paginator changes

--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -1,6 +1,8 @@
 <div class="container-div">
-  <span class="task-label">Contact Center Details</span>
-  <span class="fa fa-info-circle info-icon"></span>
+  <div>
+    <span class="task-label">Contact Center Details</span>
+    <span class="fa fa-info-circle info-icon"></span>
+  </div>
   <div class="task-sum-pad">
     <p-card>
       <span class="task-sum-label">Task Summary</span>
