--- a/src/app/home/task/my-task-list/my-task-list.component.scss
+++ b/src/app/home/task/my-task-list/my-task-list.component.scss
@@ -1,7 +1,6 @@
 .paginator-align{
-    text-align: center;
+    text-align: right;
     position: relative;
     top: -46px;
-    left: -80px;
-
+    right :184px
 }
