--- a/src/app/create-task/actions/contact-center/contact-center.component.scss
+++ b/src/app/create-task/actions/contact-center/contact-center.component.scss
@@ -3,6 +3,7 @@
     font-size: 23px;
     padding-left: 15px;
     font-weight: bold;
+    padding-right: 7px;
 }
 .info-icon{
     display: inline-block;
