Pankaj: File upload with document detail and backend integration done

--- a/src/app/create-task/actions/contact-center/contact-center.component.html
+++ b/src/app/create-task/actions/contact-center/contact-center.component.html
@@ -88,7 +88,7 @@
           </srca-task-detail>
         </p-tabPanel>
         <p-tabPanel header="Document">
-          <srca-document [DocumentDetailData]="contactCenterData?.documents"></srca-document>
+          <srca-document [documentDetailData]="contactCenterData"></srca-document>
         </p-tabPanel>
       </p-tabView>
       <div class="button-style">
