upload document validations added

--- a/src/app/home/task/my-task-list/my-task-list.component.scss
+++ b/src/app/home/task/my-task-list/my-task-list.component.scss
@@ -1,6 +1,7 @@
 .paginator-align{
     text-align: right;
-    position: relative;
-    top: -46px;
-    right :184px
+    // position: relative;
+    // top: -46px;
+    // right :184px
+    margin-bottom: 1rem;
 }
