--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -91,6 +91,9 @@ p-dropdown.invalid-dropdown .ui-dropdown {
     color: red;
     padding-top: 10px;
 }
+.error-col{
+    color: red;
+}
 
 label{
     font-weight: bold;
