--- a/src/app/create-task/actions/contact-center/document/document.component.html
+++ b/src/app/create-task/actions/contact-center/document/document.component.html
@@ -1,11 +1,11 @@
-
 <div class="panel">
     <p-panel header="Document">
         <p-header>
-            <button pButton type="button" label="Add Document" class="float-r" (click)="openDialog()" *ngIf="!uploadDoc"></button>
+            <button pButton type="button" label="Add Document" class="float-r" (click)="openDialog()"
+                *ngIf="!uploadDoc"></button>
         </p-header>
         <div *ngIf="!uploadDoc" style="height: 364px;">
-            <p-table [columns]="cols" [value]="documentList" >
+            <p-table [columns]="cols" [value]="documentList">
                 <ng-template pTemplate="header" let-columns>
                     <tr>
                         <th *ngFor="let col of columns">
@@ -20,63 +20,58 @@
                         </td>
                     </tr>
                 </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr class="text-center">
+                        <td colspan="7">No records to display.</td>
+                    </tr>
+                </ng-template>
             </p-table>
         </div>
         <div>
-        <p-panel header="Upload File" *ngIf="uploadDoc">
-        <form [formGroup]="documentDetailsForm" (ngSubmit)="onSubmit()">
-            <div class="panel-border">
-                Choose a document to attach to this request:
-                <div class="content-t-mar">
-                    <p-dropdown [options]="fileTypes" (onChange)="onFileTypeChange($event)" [(ngModel)]="selectedFileTypeId" formControlName="fileType" required></p-dropdown>
-                    <div *ngIf="documentDetailsForm.controls['fileType'].invalid && (documentDetailsForm.controls['fileType'].dirty || documentDetailsForm.controls['fileType'].touched)" class="alert alert-danger form-danger">
+            <p-panel header="Upload File" *ngIf="uploadDoc">
+                <form [formGroup]="documentDetailsForm" (ngSubmit)="onSubmit()">
+                    <div class="panel-border">
+                        <label class="mar-b-0">Choose a document to attach to this request:</label>
+                        <div class="content-t-mar">
+                            <p-dropdown [options]="fileTypes" (onChange)="onFileTypeChange($event)"
+                                [(ngModel)]="selectedFileTypeId" formControlName="fileType"></p-dropdown>
+                        </div>
 
-                        <div *ngIf="documentDetailsForm.controls['fileType'].errors.required">
-                           file type required
+                        <label class="mar-b-0">This document requires a description</label>
+                        <div class="content-t-mar">
+                            <input type="text" pInputText formControlName="description" required>
+                            <div *ngIf="isSubmitted && description.invalid" class="error-col">
+                                <div *ngIf="description.errors.required">
+                                    Description is required
+                                </div>
+                            </div>
+                        </div>
+                        <label class="mar-b-0">Choose file to attach now or you will be required to attach a file
+                            later</label>
+                        <div class="content-t-mar">
+                            <span class="btn btn-default">
+                                <input type="file" (change)="selectFile($event)" formControlName="fileName" required />
+                            </span>
+                            <div style="width: 300px;">
+                                <p-progressBar [value]="progress"></p-progressBar>
+                            </div>
+                            <span class="message-align">
+                                {{message}}
+                            </span>
+                            <div *ngIf="isSubmitted && fileName.invalid" class="error-col">
+                                <div *ngIf="fileName.errors.required">
+                                    Document selection required
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-               
-                This document requires a description
-                <div class="content-t-mar">
-                    <input type="text" pInputText formControlName="description" required>  
-                    <div *ngIf="documentDetailsForm.controls['description'].invalid && (documentDetailsForm.controls['description'].dirty || documentDetailsForm.controls['description'].touched)" class="alert alert-danger form-danger" role="alert">
-
-                        <div *ngIf="documentDetailsForm.controls['description'].errors.required">
-                          Description is required
-                        </div>
-                    </div>       
-                </div>
-                Choose file to attach now or you will be required to attach a file later
-                <div class="content-t-mar">
-                      <label class="btn btn-default">
-                        <input type="file" (change)="selectFile($event)" formControlName="fileName" required/>
-                        <span>
-                            <p-progressBar [value]="progress"></p-progressBar>
-                        <span>
-                            {{message}}
-                        </span>
-                        </span>
-                      </label>
-                        
-                    <div *ngIf="documentDetailsForm.controls['fileName'].invalid && (documentDetailsForm.controls['fileName'].dirty || documentDetailsForm.controls['fileName'].touched)" class="alert alert-danger form-danger" role="alert">
-                        <div *ngIf="documentDetailsForm.controls['fileName'].errors.required">
-                          Document selection required
-                        </div>
+                    <div class="panel-btn">
+                        <span><button pButton type="submit" label="Add Document"></button></span>
+                        <span><button pButton type="button" label="Cancel" (click)="onCancel()"></button></span>
                     </div>
-                </div>
-            </div>  
-            <div class="panel-btn">
-              <span><button pButton type="submit" label="Add Document" [disabled]="!documentDetailsForm.valid"></button></span> 
-                <span><button pButton type="button" label="Cancel" (click)="onCancel()"></button></span>
-            </div>
-        </form> 
-            </p-panel> 
-        </div>    
+                </form>
+            </p-panel>
+        </div>
     </p-panel>
-  
+
 </div>
-
-
-
-
