--- a/src/app/create-task/actions/contact-center/document/document.component.scss
+++ b/src/app/create-task/actions/contact-center/document/document.component.scss
@@ -1,4 +1,5 @@
 
+@import "../../../../../assets/scss/variables.scss";
 .panel-border{
     border: 1px solid black;
     padding: 10px;
@@ -12,4 +13,18 @@
 }
 .content-t-mar{
     margin-top: 5px;
+    margin-bottom: 17px;
+}
+.required-indicator {
+    padding-left: 2px;
+    color: $orange-col;
+}
+.mar-b-0{
+    margin-bottom: 0px;
+}
+.message-align{
+    display: inline-block;
+    margin-left: 321px;
+    position: relative;
+    bottom: 24px;
 }
