task management - general approach initial commit

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -12,7 +12,7 @@
                 <p-header>
                     Actions
                 </p-header>
-                <a routerLink="./">Account Maintenance</a>
+                <a (click)="createNewTask('Contact Center', 'acct-maintenance')">Account Maintenance</a>
                 <a routerLink="./">Acct Review Maintenance</a>
                 <a routerLink="./">Asset Transaction</a>
                 <a routerLink="../contact-center" [state]="{data: contactCenterDetails}">
