--- a/src/assets/scss/table.scss
+++ b/src/assets/scss/table.scss
@@ -1,15 +1,82 @@
 .my-task-list-table .ui-table{
+    p-paginator{
+        .ui-paginator{
+            width: 444px;
+            margin-left: 800px;
+            margin-top: -35px;
+            bottom: 13px;
+            border-block-end-color: black;
+            border: 1px solid lightgray;
+            position: relative;
+            background-color: #fff;
+        }
+    }
     .ui-table-thead{
         tr{
             th{
                 white-space: nowrap;
             }
+            th:first-child{
+                width: 80px;
+            }
+            th:nth-child(2){
+                width: 123px;
+            }
+            th:nth-child(3){
+                width: 212px;
+            }
+            th:nth-child(4){
+                width: 200px;
+            }
+            th:nth-child(5){
+                width: 115px;
+            }
+            th:nth-child(6){
+                width: 140px;
+            }
+            th:nth-child(7){
+                width: 150px;
+            }
+            th:nth-child(8){
+                width: 126px;
+            }
+            th:nth-child(9){
+                width: 104px;
+            }
+
         }
     }
     .ui-table-tbody {
         tr {
+            td:first-child{
+                width: 80px;
+            }
+            td:nth-child(2){
+                width: 123px;
+            }
+            td:nth-child(3){
+                width: 212px;
+            }
+            td:nth-child(4){
+                width: 200px;
+            }
+            td:nth-child(5){
+                width: 115px;
+            }
+            td:nth-child(6){
+                width: 140px;
+            }
+            td:nth-child(7){
+                width: 150px;
+            }
+            td:nth-child(8){
+                width: 126px;
+            }
+            td:nth-child(9){
+                width: 104px;
+            }
             td{
-                padding: 0.151em 0.457em !important;
+               padding: 0.8em 0.8em !important;
             }
         }
     } 
