--- a/src/app/home/task/my-task-list/my-task-list.component.scss
+++ b/src/app/home/task/my-task-list/my-task-list.component.scss
@@ -35,6 +35,7 @@
         }
     }
     .ui-table-tbody {
+        height: 450px;
         tr {
             td:first-child{
                 width: 80px;
