paginator alignment and table width UI changes

--- a/src/app/home/task/my-task-list/my-task-list.component.scss
+++ b/src/app/home/task/my-task-list/my-task-list.component.scss
@@ -81,6 +81,7 @@
             }
             .ui-table-scrollable-body {
                 overflow-y: scroll !important;
+                height: 450px;
             }
         }
     }
